--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.JSInterop
 @using PredictionLeague.Contracts
 @using PredictionLeague.Web.Client
