--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -36,7 +36,7 @@
                         {
                             <tr>
                                 <td class="rank-col fw-bold">@entry.Rank</td>
-                                <td class="player-name-col">@entry.PlayerName</td>
+                                <td class="player-name-col fw-bold">@entry.PlayerName</td>
                                 <td class="points-col fw-bold">@entry.TotalPoints</td>
                             </tr>
                         }
@@ -63,7 +63,7 @@
     {
         try
         {
-            _leaderboardEntries = await LeagueService.GetOverallLeaderboard(LeagueId);
+            _leaderboardEntries = await LeagueService.GetOverallLeaderboardAsync(LeagueId);
         }
         catch (Exception)
         {
