--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -32,9 +32,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <h5 class="text-white">Monthly Leaderboard (Coming Soon)</h5>
-                    </div>
+                    <MonthlyLeaderboardTile LeagueId="LeagueId" />
                 </div>
 
                 <div class="col-md-4 mb-4">
