Tidy CSS for Mobile

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
@@ -38,7 +38,7 @@
                                                     <tr>
                                                         <th class="rank-col">#</th>
                                                         <th class="player-name-col">Player</th>
-                                                        <th class="points-col">Points</th>
+                                                        <th class="points-col">Pts</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
