--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -5,7 +5,7 @@
 
 <div class="card">
     <h5 class="card-title text-white fw-bold mb-3">Overall Leaderboard</h5>
-    <div class="card-body">
+    <div class="card-body no-padding">
         @if (_isLoading)
         {
             <div class="d-flex justify-content-center align-items-center h-100">
@@ -28,7 +28,7 @@
                         <tr>
                             <th class="rank-col">#</th>
                             <th class="player-name-col">Name</th>
-                            <th class="points-col">Points</th>
+                            <th class="points-col">Pts</th>
                         </tr>
                     </thead>
                     <tbody>
