--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
@@ -45,6 +45,10 @@
     flex-grow: 1;
 }
 
+.card-body.no-padding{
+    padding:0;
+}
+
     .card-body.justify-start {
         justify-content: start;
     }
