--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -20,7 +20,7 @@
         else if (_months.Any())
         {
             <div class="carousel-wrapper">
-                <div class="carousel-container">
+                <div class="carousel-container" @ontouchstart="HandleTouchStart" @ontouchmove="HandleTouchMove" @ontouchend="HandleTouchEnd">
                     <div class="carousel-track" style="@_trackStyle">
                         @foreach (var month in _months)
                         {
@@ -102,16 +102,13 @@
     public int LeagueId { get; set; }
 
     private List<MonthDto> _months = new();
-  
     private readonly Dictionary<int, LeaderboardData> _leaderboards = new();
-  
     private bool _isLoadingMonths = true;
-  
     private string? _errorMessage;
     private string _trackStyle = "transform: translateX(0%);";
-
     private int _currentIndex;
- 
+    private double _touchStartX;
+
     protected override async Task OnInitializedAsync()
     {
         try
@@ -134,6 +131,35 @@
         finally
         {
             _isLoadingMonths = false;
+        }
+    }
+
+
+    private void HandleTouchStart(TouchEventArgs e) => _touchStartX = e.Touches[0].ClientX;
+    private void HandleTouchMove(TouchEventArgs e) { }
+    private void HandleTouchEnd(TouchEventArgs e)
+    {
+        var touchEndX = e.ChangedTouches[0].ClientX;
+        var diffX = _touchStartX - touchEndX;
+
+        if (Math.Abs(diffX) > 50)
+        {
+            if (diffX > 0)
+            {
+                if (_currentIndex < _leaderboards.Count - 1)
+                {
+                    _currentIndex++;
+                    UpdateTrackStyle();
+                }
+            }
+            else
+            {
+                if (_currentIndex > 0)
+                {
+                    _currentIndex--;
+                    UpdateTrackStyle();
+                }
+            }
         }
     }
 
