--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
@@ -41,6 +41,11 @@
     background-color: var(--pl-red);
 }
 
+.badge-group--yellow {
+    background-color: var(--pl-yellow);
+    color: var(--pl-purple-800);
+}
+
 .badge-group--blue {
     background-color: var(--pl-blue-light);
 }
@@ -88,6 +93,10 @@
     color: var(--pl-blue-light);
 }
 
+.badge-group--yellow .badge-icon {
+    color: var(--pl-purple-800);
+}
+
 .badge-group--gold .badge-icon {
     color: var(--pl-gold);
 }
@@ -109,10 +118,28 @@
         color: white;
     }
 
+.badge-group.pulsing {
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 193, 7, 0.7);
+    }
+
+    70% {
+        box-shadow: 0 0 0 10px rgba(255, 193, 7, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(255, 193, 7, 0);
+    }
+}
+
 @media (max-width: 400px) {
     .badge-group {
         font-size: 0.6em;
-        padding: 2px 10px 2px 2px;
+        padding: 0px 10px 0px 0px;
     }
 
     .badge-icon {
