--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/List.razor
@@ -23,7 +23,11 @@
 
         @if (_seasons == null)
         {
-            <p class="text-center text-white"><em>Loading...</em></p>
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="spinner-border text-light" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
         }
         else
         {
